welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:4: error: illegal start of simple expression
	if(getX()==(getMondeLargeur()-1) && getY() == (getMondeHauteur()-1))){true}else{false}
                                                                            ^